[package]
name = "project_xxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
#crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "tlhelp32"] }

[dependencies]
wasm-bindgen = "0.2.84"
#openssl = { version = "0.10.45", features = ["vendored"] }
#openssl-sys = "0.9.80"