[package]
name = "project_xxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
#crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "tlhelp32", "ws2def"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
socket2 = "0.4.7"
wasm-bindgen = "0.2.84"
whoami = "1.3.0"
#openssl = { version = "0.10.45", features = ["vendored"] }
#openssl-sys = "0.9.80"